# BankTransferTool

./: CMakeLists.txt  main.cpp
BankTransfer_lib/: BankAccount.cpp  BankAccount.h  CMakeLists.txt  Transaction.cpp  Transaction.h
Bank_Tester/: CMakeLists.txt
Bank_Tester/basic_tests/: BankAccountTest.cpp  TransactionTest.cpp
